do-not-track those dasterdly .DS_Store files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 housekeeping/.~lock.ne_themes_versions.xls#
 housekeeping/.~lock.ne_admin_0_details.xls#
 packages/natural_earth_vector.sqlite
