--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ zips/110m_physical/
 zips/housekeeping/
 zips/packages/
 zips/updates/
+derived_physical_labels
+derived_populated_places
 archive/natural_earth_vector.sqlite_2.0.0_rc2.zip
 archive/natural_earth_vector.sqlite_1.4.0.zip
 archive/natural_earth_vector_2.0.0.zip
