--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 .DS_Store
 housekeeping/.~lock.ne_themes_versions.xls#
 housekeeping/.~lock.ne_admin_0_details.xls#
+housekeeping/.~lock.ne_admin_0_details.ods#
+housekeeping/src/*
 packages/natural_earth_vector.sqlite
 packages/Natural_Earth_quick_start/50m_raster/NE1_50M_SR_W/NE1_50M_SR_W.tif
+packages/Natural_Earth_quick_start/Natural_Earth_quick_start_for_QGIS_v3.qgs~
 geojson/ne_10m_roads_north_america.geojson
 *.sqlite
+*.py-e
+*.sh-e
 zips/10m_cultural/
 zips/10m_physical/
 zips/50m_cultural/
@@ -32,3 +37,6 @@ archive/Natural_Earth_quick_start_1.4.0.zip
 archive/10m_cultural_2.0.0.zip
 archive/Natural_Earth_quick_start_2.0.0.zip
 archive/10m_cultural_1.4.0.zip
+archive/*
+intermediate/*
+backup/*
