--- a/.travis.yml
+++ b/.travis.yml
@@ -67,23 +67,23 @@ matrix:
 #            - ./run_all.sh
 
 
-        - language: python
-          python: 3.6
-          os: linux
-          env:
-             - nedocker=NO           
-          sudo: required          
-          before_install:
-                - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
-                - sudo apt-get --yes --force-yes update -qq
-                - sudo apt-get install --yes gdal-bin jq
-                - pip3 install -U SPARQLWrapper
-                - pip3 install -U fiona
-                - python -c "import fiona"                
-                - pip3 install -U csvtomd
-                - pip3 install -U requests
-          script:
-            - ./run_all.sh
+#        - language: python
+#          python: 3.6
+#          os: linux
+#          env:
+#             - nedocker=NO           
+#          sudo: required          
+#          before_install:
+#                - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+#                - sudo apt-get --yes --force-yes update -qq
+#                - sudo apt-get install --yes gdal-bin jq
+#                - pip3 install -U SPARQLWrapper
+#                - pip3 install -U fiona
+#                - python -c "import fiona"                
+#                - pip3 install -U csvtomd
+#                - pip3 install -U requests
+#          script:
+#            - ./run_all.sh
 
 
 
