wikidata: add fast test mode ( run only 110m ) - workaround for a travis timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
                 - conda install --yes -c conda-forge requests
                 - pip install csvtomd
           script:
-            - ./run_all.sh
+            - ./run_all.sh fast
 
 
 #        - os: linux
